- Add ScriptFile interface for properly scripts initialization - Fix currentLoadingScript in L2ScriptEngineManager - cleaning L2ScriptEngineManager - Delete QuestJython